<resources>
    <string name="app_name">Code Revision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
    <string name="refresh">Refresh</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="add_wishlist_problem">Add To Wishlist</string>
    <string name="add_tried_problem">Add Tried Problem</string>
    <string name="add_solved_problem">Add Solved Problem</string>
    <string name="to_add_problems">to add problems</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="bhaskar">Bhaskar</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="email_id">bhaskarmandal369@gmail.com</string>
    <string name="code_revision">© Code Revision</string>
    <string name="_2">2.</string>
    <string name="_1">1.</string>
    <string name="_3">3.</string>
    <string name="_5">5.</string>
    <string name="_4">4.</string>
    <string name="topic">Enter Topic/Tag</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="wow_solved">🎉Wow! Solved a new problem</string>
    <string name="date_format">dd-mm-yyyy</string>
    <string name="keep_it_up">Keep it up @Name</string>
    <string name="enter_title">Enter Title...</string>
    <string name="todo">TODO</string>
    <string name="paste_the_link">Paste the Link</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="github_link">github.com/bhaskaraa45/CodeRevision</string>
    <string name="name">Code Revision</string>
    <string name="about_paragraph">Sometimes, we forget certain approaches or syntax that we have previously used. To address this, I have developed an app that allows you to save your solved CP problems and revise them later.\n\nWith this app, you can easily store your solved problems and access them whenever you need to refresh your memory.</string>
    <string name="write_summary_of_the_code">Write Summary of the Code</string>
    <string name="default_web_client_id" translatable="false">163465864454-mo6eiih5fjeskk0e0kl89odvu00tutas.apps.googleusercontent.com</string>

    <string-array name="difficulty_items">
        <item>Difficulty Level</item>
        <item>Basic</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="search_by">
        <item>Title</item>
        <item>Topic</item>
        <item>Difficulty</item>
    </string-array>

    <string-array name="topic_list">
        <item>Arrays</item>
        <item>Mathematical</item>
        <item>Strings</item>
        <item>Dynamic Programming</item>
        <item>Tree</item>
        <item>Sorting</item>
        <item>Hash</item>
        <item>Bit Magic</item>
        <item>Matrix</item>
        <item>Graph</item>
        <item>Linked List</item>
        <item>Greedy</item>
        <item>Stack</item>
        <item>Searching</item>
        <item>Recursion</item>
        <item>Binary Search Tree</item>
        <item>STL</item>
        <item>Prime Number</item>
        <item>Number Theory</item>
        <item>DFS</item>
        <item>BFS</item>
        <item>Binary Search</item>
        <item>Misc</item>
        <item>Two Pointer</item>
        <item>Numbers</item>
        <item>Backtracking</item>
        <item>Queue</item>
        <item>Sieve</item>
        <item>Heap</item>
        <item>Map</item>
        <item>Sliding Window</item>
        <item>Combinatorial</item>
        <item>Divide and Conquer</item>
        <item>Palindrome</item>
        <item>Pattern</item>
        <item>Trie</item>
        <item>Fibonacci</item>
        <item>Geometric</item>
        <item>Permutation</item>
        <item>Logical Thinking</item>
        <item>OOP</item>
        <item>Traversal</item>
        <item>Set</item>
        <item>Hashing</item>
        <item>HashTable</item>
        <item>Pattern Searching</item>
        <item>Priority Queue</item>
        <item>Doubly Linked list</item>
        <item>Circular Linked List</item>
        <item>Union</item>
        <item>Merge Sort</item>
        <item>Quick Sort</item>
        <item>Anagram</item>
        <item>Kadane</item>
        <item>Set</item>

    </string-array>


</resources>