<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sortName"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />
            <item
                android:id="@+id/sortDate"
                android:title="@string/sort_by_date"
                app:showAsAction="never" />
        </menu>
    </item>


</menu>