<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bg_add_button">

    <LinearLayout
        android:id="@+id/addSolved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/task"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_solved_problem"
            android:layout_marginTop="2dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addTried"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/tried"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tried_problem"
            android:layout_marginTop="2dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="@color/black"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addWishlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/wishlist"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_wishlist_problem"
            android:layout_marginTop="2dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="@color/black"

            />
    </LinearLayout>





</LinearLayout>