<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bhaskar.aa45.coderevision.MeFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
                    android:contentDescription="@string/profile" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bhaskar"
                    android:fontFamily="@font/actor"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:padding="1dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginTop="2dp"
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_id"
                    android:layout_gravity="center"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"/>

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp"
                />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_me_items">

                <RelativeLayout
                    android:id="@+id/DarkMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/darkIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/dark_mode"
                        android:contentDescription="@string/dark_mode"
                        android:padding="4dp"
                        android:background="@drawable/dark_mode_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/darkIcon"
                        android:fontFamily="@font/actor"
                        android:text="@string/dark_mode"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                    <Switch
                        android:id="@+id/darkModeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:switchMinWidth="55dp"
                        android:layout_centerVertical="true"/>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/notification_icon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/notify"
                        android:contentDescription="notification"
                        android:padding="4dp"
                        android:background="@drawable/notify_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/notification_icon"
                        android:fontFamily="@font/actor"
                        android:text="Notifications"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                    <Switch
                        android:id="@+id/notificationSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:switchMinWidth="55dp"
                        android:layout_centerVertical="true"/>


                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_me_items">

                <RelativeLayout
                    android:id="@+id/share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/shareIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/share"
                        android:contentDescription="@string/share"
                        android:padding="4dp"
                        android:background="@drawable/share_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/shareIcon"
                        android:fontFamily="@font/actor"
                        android:text="@string/share"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />



                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/settingsIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/settings"
                        android:contentDescription="@string/settings"
                        android:padding="4dp"
                        android:background="@drawable/settings_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/settingsIcon"
                        android:fontFamily="@font/actor"
                        android:text="@string/settings"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_right"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_me_items">

                <RelativeLayout
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/aboutIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/about"
                        android:contentDescription="@string/about"
                        android:padding="4dp"
                        android:background="@drawable/about_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/aboutIcon"
                        android:fontFamily="@font/actor"
                        android:text="@string/about"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_right"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/feedbackIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/feedback"
                        android:contentDescription="@string/feedback"
                        android:padding="4dp"
                        android:background="@drawable/feedback_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/feedbackIcon"
                        android:fontFamily="@font/actor"
                        android:text="@string/feedback"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_right"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/report"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/reportIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/bug_report"
                        android:contentDescription="@string/report_a_bug"
                        android:padding="4dp"
                        android:background="@drawable/report_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/reportIcon"
                        android:fontFamily="@font/actor"
                        android:text="@string/report_a_bug"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_me_items">

                <RelativeLayout
                    android:id="@+id/logout"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/logoutIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/logout"
                        android:contentDescription="@string/log_out"
                        android:padding="5dp"
                        android:background="@drawable/logout_icon_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/logoutIcon"
                        android:fontFamily="@font/actor"
                        android:text="@string/log_out"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_right"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>











</LinearLayout>